Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2022

MGS fails to mount due to "has no index assigned (probably formatted with old mkfs" error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 4132

      In 2.4 the MGS is not formated with a index. In fact you can't specify a index but mount.lustre will not mount any device without a index.

            keith Keith Mannthey (Inactive)
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: