LU-2022 utils: Mount MGS lacking index

The MGT is the only device that can't be formatted with a
index but mount.lustre expects all devices to be formated
with a index. This patch allows the MGT to be the exception.

Signed-off-by: James Simmons <uja.ornl@gmail.com>
Change-Id: Icea4e18173e9c670302a795bd53b2769b55fc38f