lustre/utils/mount_lustre.c
@@ -311,7 +311,7 @@ static int parse_ldd(char *source, struct mount_opts *mop, char *options)
 		return rc;
 	}
 
-	if (ldd->ldd_flags & LDD_F_NEED_INDEX) {
+	if (!IS_MGS(ldd) && ldd->ldd_flags & LDD_F_NEED_INDEX) {
 		fprintf(stderr, "%s: %s has no index assigned "
 			"(probably formatted with old mkfs)\n",
 			progname, source);
